# minesweeper-solver

./: .gitignore  README.md  manage.py  pyproject.toml
src/: generator.py  solver.py
src/model/: board.py  cell.py  cell_state.py  cell_type.py  field.py
src/solver/: solver.py
